# otslib

./: .gitignore  .uncrustify  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  compliance.yml  documentation.yml
doc/: CMakeLists.txt  api.rst  conf.py.in  index.rst
docs/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: api.doctree  environment.pickle  index.doctree
examples/: CMakeLists.txt  common.c  common.h  create.c  directory.c  features.c  hexdump.c  hexdump.h  metadata.c  read.c  write.c
include/otslib/: action.h  directory.h  list.h  metadata.h  otslib.h
lib/: CMakeLists.txt  directory.c  list.c  logging.h  metadata.c
lib/include/: CMakeLists.txt
lib/include/otslib/: action.h  directory.h  list.h  metadata.h  otslib.h
src/: CMakeLists.txt  action.c  directory.c  internal.c  internal.h  list.c  metadata.c  otslib.c
src/logging/: stdout.c  syslog.c
